ignore파일 업데이트

--- a/JobInfo/.gitignore
+++ b/JobInfo/.gitignore
@@ -1,1 +1,24 @@
-/bin/
+# Package File#
+*.jar
+*.war
+*.ear
+*/db
+
+#########
+#Eclipse#
+#########
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
