구조 변경 및 중간저장

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,17 @@ tmp/**/*
 *.swp
 *~.nib
 .classpath
-.settings/
+.factorypath
+/.settings
 .loadpath
 /src/main/resources/rebel.xml
-resource/
+
+########
+커스텀
+########
+.apt_generated
+.apt_generated_tests
+/data
+/logs
+/bin
+/target
