--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,11 @@
   		<artifactId>h2</artifactId>
   		<scope>runtime</scope>
   	</dependency>
-
-    <dependency>
-    	<groupId>editor.hex</groupId>
-    	<artifactId>HexEditor</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
+	<dependency>
+	    <groupId>com.squareup.okhttp3</groupId>
+	    <artifactId>okhttp</artifactId>
+    	<version>4.12.0</version>
+	</dependency>
   </dependencies>
   
   <build>
