--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ tmp/**/*
 /.factorypath
 /.settings
 .loadpath
-/src/main/resources/rebel.xml
 
 ########
 커스텀
@@ -33,4 +32,4 @@ tmp/**/*
 /logs
 /bin
 /target
-/JobInfo/src/main/resources/sql-init-folder/datas/group_api_data.sq
+resources/sql-init-folder/datas/group_api_data.sql
