--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,14 @@
 /bin/
 /data/
 /logs/
+/src/main/resources/mappers/
+/src/main/resources/sql-init-folder/
 
 #제외파일
 .classpath
 .factorypath
 .project
+/src/main/resources/application-*.properties
+
+#추적허용
+!src/main/resources/application.properties
