--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /bin/
 /data/
 /logs/
-/src/main/resources/**
 
 #제외파일
 .classpath
@@ -12,6 +11,7 @@
 .project
 
 #추적허용
+/src/main/resources/*
 !/src/main/resources/mappers/apiData.xml
 !/src/main/resources/mappers/guiLabels.xml
 !/src/main/resources/application.properties
